{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 310,
  "lineage": "a48804f0-4a7f-bfda-5c6f-d4e2fad81bbf",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ext",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:security-group/sg-0aabb627239e5d0b3",
            "description": "External ALB SG: inbound 80/443 from Internet",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "To VPC only",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0aabb627239e5d0b3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from Internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from Internet (use with ACM + HTTPS listener)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ma-oig-mvp-sg-alb-ext",
            "name_prefix": "",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ma-oig-mvp-sg-alb-ext",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "public"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-sg-alb-ext",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "sg-0aabb627239e5d0b3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_int",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:security-group/sg-09b0463e54d308073",
            "description": "Internal ALB SG: inbound app port from web tier",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "To VPC only",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09b0463e54d308073",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from web tier",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06e95cff20d1a818f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ma-oig-mvp-sg-alb-int",
            "name_prefix": "",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ma-oig-mvp-sg-alb-int",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "app"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-sg-alb-int",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "sg-09b0463e54d308073",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_ext",
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:security-group/sg-063a2617656c28924",
            "description": "App SG: allow app port only from internal ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress (tighten later if desired)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-063a2617656c28924",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "App traffic from internal ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09b0463e54d308073"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ma-oig-mvp-sg-app",
            "name_prefix": "",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ma-oig-mvp-sg-app",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "app"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-sg-app",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "sg-063a2617656c28924",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_ext",
            "aws_security_group.alb_int",
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:security-group/sg-067241da3efc5b8f6",
            "description": "DB SG: allow Postgres only from app tier",
            "egress": [
              {
                "cidr_blocks": [
                  "10.20.0.0/16"
                ],
                "description": "All egress within VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-067241da3efc5b8f6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Postgres from app SG",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-063a2617656c28924"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "ma-oig-mvp-sg-db",
            "name_prefix": "",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ma-oig-mvp-sg-db",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-sg-db",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "sg-067241da3efc5b8f6",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_ext",
            "aws_security_group.alb_int",
            "aws_security_group.app",
            "aws_security_group.web",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:security-group/sg-06e95cff20d1a818f",
            "description": "Web tier SG: allow app port only from external ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All egress (tighten later if desired)",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06e95cff20d1a818f",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Web traffic from external ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0aabb627239e5d0b3"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ma-oig-mvp-sg-web",
            "name_prefix": "",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ma-oig-mvp-sg-web",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "public"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-sg-web",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "sg-06e95cff20d1a818f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb_ext",
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "us-east-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:subnet/subnet-09a2f2b4d0ae60a45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.20.128.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09a2f2b4d0ae60a45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "820648255477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ma-oig-mvp-db-us-east-1a",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-db-us-east-1a",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "subnet-09a2f2b4d0ae60a45",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        },
        {
          "index_key": "us-east-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:subnet/subnet-0bcae64ba43f58021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.20.144.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcae64ba43f58021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "820648255477",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ma-oig-mvp-db-us-east-1c",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-db-us-east-1c",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig",
              "tier": "db"
            },
            "vpc_id": "vpc-0aff65b623105d167"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "subnet-0bcae64ba43f58021",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:820648255477:vpc/vpc-0aff65b623105d167",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.20.0.0/16",
            "default_network_acl_id": "acl-0256de8e43a0330f4",
            "default_route_table_id": "rtb-0137b267e9fa42850",
            "default_security_group_id": "sg-04b9e9055485af230",
            "dhcp_options_id": "dopt-04d6dbe00939b04c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0aff65b623105d167",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0137b267e9fa42850",
            "owner_id": "820648255477",
            "region": "us-east-1",
            "tags": {
              "Name": "ma-oig-mvp-vpc",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig"
            },
            "tags_all": {
              "Name": "ma-oig-mvp-vpc",
              "compliance": "nist-800-53",
              "environment": "mvp",
              "managed_by": "terraform",
              "project": "ma-oig"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "820648255477",
            "id": "vpc-0aff65b623105d167",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}